--- a/simuladorFirewall/simuladorFirewall.cabal
+++ b/simuladorFirewall/simuladorFirewall.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -24,15 +24,24 @@ source-repository head
 
 library
   exposed-modules:
+      AbsSimFirewall
       AST
+      Common
+      ErrM
+      Eval
       Ip
+      LexSimFirewall
       Lib
+      ParSimFirewall
+      PrintSimFirewall
+      SkelSimFirewall
   other-modules:
       Paths_simuladorFirewall
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable simuladorFirewall-exe
@@ -43,7 +52,8 @@ executable simuladorFirewall-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , simuladorFirewall
   default-language: Haskell2010
 
@@ -56,6 +66,7 @@ test-suite simuladorFirewall-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , simuladorFirewall
   default-language: Haskell2010
