Codigo completado, no compilado

--- a/simuladorFirewall/simuladorFirewall.cabal
+++ b/simuladorFirewall/simuladorFirewall.cabal
@@ -32,6 +32,7 @@ library
       Ip
       LexSimFirewall
       Lib
+      LoadFile
       ParSimFirewall
       PrintSimFirewall
       SkelSimFirewall
